samples/_failures_safe/1761795052_2978fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3626dfb.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_f3626dfb.c:164:17: error: expected ‘)’ at end of input
  164 |     switch (type
      |            ~    ^
      |                 )
./samples/SAFE/__tmp_f3626dfb.c:164:5: error: expected declaration or statement at end of input
  164 |     switch (type
      |     ^~~~~~
